// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`at-rules.css 1`] = `
a {
@include section-type-1(
$header:
(
margin: 0 0 $margin-base,
text-align: left,
),
$decoration:
(
type: base,
margin: 0 auto -1px 0,
primary-color: $brand-primary,
secondary-color: $gray-light,
),
$title:
(
margin: 0 0 $margin-small,
color: false,
font-size: $font-size-h3,
font-weight: false,
line-height: $line-height-h3,
)
);
}

a {
@include item-spotlight-properties-transition(
"-title",
(
box-shadow: 0 3px 10px rgba(0, 0, 0, 0.15),
)
);
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a {
  @include section-type-1(
    $header: (
      margin: 0 0 $margin-base,
      text-align: left
    ),
    $decoration: (
      type: base,
      margin: 0 auto -1px 0,
      primary-color: $brand-primary,
      secondary-color: $gray-light
    ),
    $title: (
      margin: 0 0 $margin-small,
      color: false,
      font-size: $font-size-h3,
      font-weight: false,
      line-height: $line-height-h3
    )
  );
}

a {
  @include item-spotlight-properties-transition(
    "-title",
    (
      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.15)
    )
  );
}

`;

exports[`at-rules.css 2`] = `
a {
@include section-type-1(
$header:
(
margin: 0 0 $margin-base,
text-align: left,
),
$decoration:
(
type: base,
margin: 0 auto -1px 0,
primary-color: $brand-primary,
secondary-color: $gray-light,
),
$title:
(
margin: 0 0 $margin-small,
color: false,
font-size: $font-size-h3,
font-weight: false,
line-height: $line-height-h3,
)
);
}

a {
@include item-spotlight-properties-transition(
"-title",
(
box-shadow: 0 3px 10px rgba(0, 0, 0, 0.15),
)
);
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a {
  @include section-type-1(
    $header: (
      margin: 0 0 $margin-base,
      text-align: left,
    ),
    $decoration: (
      type: base,
      margin: 0 auto -1px 0,
      primary-color: $brand-primary,
      secondary-color: $gray-light,
    ),
    $title: (
      margin: 0 0 $margin-small,
      color: false,
      font-size: $font-size-h3,
      font-weight: false,
      line-height: $line-height-h3,
    )
  );
}

a {
  @include item-spotlight-properties-transition(
    "-title",
    (
      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.15),
    )
  );
}

`;

exports[`declaration.css 1`] = `
a {
    margin: $bar,;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a {
  margin: $bar;
}

`;

exports[`declaration.css 2`] = `
a {
    margin: $bar,;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a {
  margin: $bar;
}

`;

exports[`list.css 1`] = `
$colors: hotpink deepskyblue firebrick,;
$list: (a,);
$list: ('Helvetica', 'Arial', sans-serif,);
$colors: (
  "red",
  "blue"
);
$config: (
  themes: (
    mist: (
      header: #dcfac0,
      content: #00968b,
      footer: #85c79c
    ),
    $spring: (
      header: #f4fac7,
      content: #c2454e,
      footer: #ffb158
    )
  )
);

$breakpoint-map: (
  small: (
    min-width: null,
    max-width: 479px,
    base-font: 16px,
    vertical-rhythm: 1.3
  ),
  medium: (
    min-width: 480px,
    max-width: 959px,
    base-font: 18px,
    vertical-rhythm: 1.414
  ),
  large: (
    min-width: 960px,
    max-width: 1099px,
    base-font: 18px,
    vertical-rhythm: 1.5
  ),
  xlarge: (
    min-width: 1100px,
    max-width: null,
    base-font: 21px,
    vertical-rhythm: 1.618
  )
);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
$colors: hotpink deepskyblue firebrick;
$list: (a);
$list: ("Helvetica", "Arial", sans-serif);
$colors: ("red", "blue");
$config: (
  themes: (
    mist: (
      header: #dcfac0,
      content: #00968b,
      footer: #85c79c
    ),
    $spring: (
      header: #f4fac7,
      content: #c2454e,
      footer: #ffb158
    )
  )
);

$breakpoint-map: (
  small: (
    min-width: null,
    max-width: 479px,
    base-font: 16px,
    vertical-rhythm: 1.3
  ),
  medium: (
    min-width: 480px,
    max-width: 959px,
    base-font: 18px,
    vertical-rhythm: 1.414
  ),
  large: (
    min-width: 960px,
    max-width: 1099px,
    base-font: 18px,
    vertical-rhythm: 1.5
  ),
  xlarge: (
    min-width: 1100px,
    max-width: null,
    base-font: 21px,
    vertical-rhythm: 1.618
  )
);

`;

exports[`list.css 2`] = `
$colors: hotpink deepskyblue firebrick,;
$list: (a,);
$list: ('Helvetica', 'Arial', sans-serif,);
$colors: (
  "red",
  "blue"
);
$config: (
  themes: (
    mist: (
      header: #dcfac0,
      content: #00968b,
      footer: #85c79c
    ),
    $spring: (
      header: #f4fac7,
      content: #c2454e,
      footer: #ffb158
    )
  )
);

$breakpoint-map: (
  small: (
    min-width: null,
    max-width: 479px,
    base-font: 16px,
    vertical-rhythm: 1.3
  ),
  medium: (
    min-width: 480px,
    max-width: 959px,
    base-font: 18px,
    vertical-rhythm: 1.414
  ),
  large: (
    min-width: 960px,
    max-width: 1099px,
    base-font: 18px,
    vertical-rhythm: 1.5
  ),
  xlarge: (
    min-width: 1100px,
    max-width: null,
    base-font: 21px,
    vertical-rhythm: 1.618
  )
);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
$colors: hotpink deepskyblue firebrick;
$list: (a);
$list: ("Helvetica", "Arial", sans-serif);
$colors: ("red", "blue");
$config: (
  themes: (
    mist: (
      header: #dcfac0,
      content: #00968b,
      footer: #85c79c,
    ),
    $spring: (
      header: #f4fac7,
      content: #c2454e,
      footer: #ffb158,
    ),
  ),
);

$breakpoint-map: (
  small: (
    min-width: null,
    max-width: 479px,
    base-font: 16px,
    vertical-rhythm: 1.3,
  ),
  medium: (
    min-width: 480px,
    max-width: 959px,
    base-font: 18px,
    vertical-rhythm: 1.414,
  ),
  large: (
    min-width: 960px,
    max-width: 1099px,
    base-font: 18px,
    vertical-rhythm: 1.5,
  ),
  xlarge: (
    min-width: 1100px,
    max-width: null,
    base-font: 21px,
    vertical-rhythm: 1.618,
  ),
);

`;

exports[`map.css 1`] = `
$map: (
    small: 767px,
    medium: 992px,
    large: 1200px,
);
$map: (
    'medium': (min-width: 800px),
    'large': (min-width: 1000px),
    'huge': (min-width: 1200px),
);
$map: ( small: 767px, medium: 992px, large: 1200px );
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
$map: (
  small: 767px,
  medium: 992px,
  large: 1200px
);
$map: (
  "medium": (
    min-width: 800px
  ),
  "large": (
    min-width: 1000px
  ),
  "huge": (
    min-width: 1200px
  )
);
$map: (
  small: 767px,
  medium: 992px,
  large: 1200px
);

`;

exports[`map.css 2`] = `
$map: (
    small: 767px,
    medium: 992px,
    large: 1200px,
);
$map: (
    'medium': (min-width: 800px),
    'large': (min-width: 1000px),
    'huge': (min-width: 1200px),
);
$map: ( small: 767px, medium: 992px, large: 1200px );
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
$map: (
  small: 767px,
  medium: 992px,
  large: 1200px,
);
$map: (
  "medium": (
    min-width: 800px,
  ),
  "large": (
    min-width: 1000px,
  ),
  "huge": (
    min-width: 1200px,
  ),
);
$map: (
  small: 767px,
  medium: 992px,
  large: 1200px,
);

`;

exports[`selector_list.css 1`] = `
asdasldaskdhjkashdahsdkjahskdjhakjsdkjahsdhkasdhkajsdhakjsdhkajsdhjkahskjdkjahsjkdjkakjsdm,
asdasldaskdhjkashdahsdkjahskdjhakjsdkjahsdhkasdhkajsdhakjsdhkajsdhjkahskjdkjahsjkdjkakjsdm, {

}

.some-class, {
&.another-class, {
     color: red;
 }
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
asdasldaskdhjkashdahsdkjahskdjhakjsdkjahsdhkasdhkajsdhakjsdhkajsdhjkahskjdkjahsjkdjkakjsdm,
asdasldaskdhjkashdahsdkjahskdjhakjsdkjahsdhkasdhkajsdhakjsdhkajsdhjkahskjdkjahsjkdjkakjsdm {
}

.some-class {
  &.another-class {
    color: red;
  }
}

`;

exports[`selector_list.css 2`] = `
asdasldaskdhjkashdahsdkjahskdjhakjsdkjahsdhkasdhkajsdhakjsdhkajsdhjkahskjdkjahsjkdjkakjsdm,
asdasldaskdhjkashdahsdkjahskdjhakjsdkjahsdhkasdhkajsdhakjsdhkajsdhjkahskjdkjahsjkdjkakjsdm, {

}

.some-class, {
&.another-class, {
     color: red;
 }
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
asdasldaskdhjkashdahsdkjahskdjhakjsdkjahsdhkasdhkajsdhakjsdhkajsdhjkahskjdkjahsjkdjkakjsdm,
asdasldaskdhjkashdahsdkjahskdjhakjsdkjahsdhkasdhkajsdhakjsdhkajsdhjkahskjdkjahsjkdjkakjsdm {
}

.some-class {
  &.another-class {
    color: red;
  }
}

`;

exports[`variable.css 1`] = `
$test: 1,;
$margin: 0, 2em, 0, 1.5em,;

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
$test: 1;
$margin: 0, 2em, 0, 1.5em;

`;

exports[`variable.css 2`] = `
$test: 1,;
$margin: 0, 2em, 0, 1.5em,;

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
$test: 1;
$margin: 0, 2em, 0, 1.5em;

`;
